<resources>
    <string name="app_name">TMDBMovies</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="timeout_error">Время ожидания ответа от сервера истекло</string>
    <string name="wrong_login_or_password_error">Неверное имя пользователя или пароль</string>
    <string name="connection_error">Ошибка подключения</string>
    <string name="need_login_and_password_error">Введите имя пользователя и пароль</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_favourite">Favourites</string>
    <string name="release_date">Дата выпуска: %1$s</string>
    <string name="runtime">Длительность: %1$d</string>
    <string name="rating">Рейтинг: %1$s/10</string>
    <string name="budget">Бюджет: $%1$s USD</string>
    <string name="revenue">Кассовые сборы: $%1s USD</string>
    <string name="genres">Жанр: %1$s</string>
    <string name="overview">Описание</string>
    <string name="to_favorite">В избранные</string>
    <string name="description_tmdb_logo">TMDB Logo</string>
    <string name="description_movie_poster">Постер фильма</string>
    <string name="now_playing">Сейчас в кинотеатрах</string>
    <string name="more">Еще</string>
    <string name="tv_shows_on_the_air">TV шоу в эфире</string>
    <string name="popular_movies">Популярные фильмы</string>
    <string name="video">Видео</string>
    <string name="description_video">video</string>
    <string name="description_cast_image">castImage</string>
    <string name="cast">В ролях</string>
    <string name="seasons">Сезоны: %1$d</string>
    <string name="episodes">Серий: %1$d</string>
    <string name="biography">Биография</string>
    <string name="age">Возраст: %1$d</string>
    <string name="birthday">Дата рождения: %1$s</string>
    <string name="place_of_birth">Место рождения: %1$s</string>
    <string name="search_movies_count">Фильмы: %1$d</string>
    <string name="search_tv_count">Сериалы: %1$d</string>
    <string name="search_persons_count">Персоны: %1$d</string>
</resources>