<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.voak.android.tmdbmovies.ui.login.LoginFragmentViewModel" />
    </data>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="24dp"
            android:paddingTop="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:boxBackgroundColor="@android:color/white"
                app:boxStrokeColor="#00D277"
                app:hintTextColor="#00D277"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.userName}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:boxBackgroundColor="@android:color/white"
                app:boxStrokeColor="#00D277"
                app:hintTextColor="#00D277"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.password}"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/login_error_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:visibility="gone"
                android:textColor="@android:color/holo_red_dark"
                android:text="@{viewModel.loginError}"
                tools:text="Ошибка подключения. Проверьте интернет соединение" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                app:backgroundTint="#00D277"
                android:textColor="@android:color/white"
                android:text="@string/enter"
                android:onClick="@{viewModel::onLoginBtnClicked}"/>

            <com.google.android.material.progressindicator.ProgressIndicator
                android:id="@+id/login_progress"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                app:indicatorType="circular"
                android:indeterminate="true"
                app:indicatorColor="#00D277"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>
</layout>

